[gd_scene load_steps=18 format=3 uid="uid://c06iuqvf852h1"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_8iuqm"]
[ext_resource type="Texture2D" uid="uid://bur71rag8yd7h" path="res://assets/sprites/logo.png" id="1_ueh8b"]
[ext_resource type="Texture2D" uid="uid://bulwl6vly6e0" path="res://assets/sprites/transition.png" id="2_c7dmo"]
[ext_resource type="Texture2D" uid="uid://bjq1lse5e3hlr" path="res://assets/sprites/menu_background_2.png" id="3_gbfej"]
[ext_resource type="FontVariation" uid="uid://dnwv2plgp22ay" path="res://assets/fonts/poco_import.tres" id="4_g1hhb"]
[ext_resource type="PackedScene" uid="uid://byjv4ks7goban" path="res://menu/main_menu_options.tscn" id="5_67ndb"]

[sub_resource type="Animation" id="Animation_fqi3v"]
length = 0.001

[sub_resource type="Animation" id="Animation_hd740"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo/LogoSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(480, 247), Vector2(480, 252), Vector2(480, 252), Vector2(480, 247)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_clg2v"]
_data = {
"RESET": SubResource("Animation_fqi3v"),
"default": SubResource("Animation_hd740")
}

[sub_resource type="Animation" id="Animation_o45oo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/TransitionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bsr5w"]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 1280), Vector2(480, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/TransitionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6klrt"]
resource_name = "slide_in_quit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 1280), Vector2(480, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/TransitionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ik080"]
resource_name = "slide_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 400), Vector2(480, -480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/TransitionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_np8xi"]
_data = {
"RESET": SubResource("Animation_o45oo"),
"slide_in": SubResource("Animation_bsr5w"),
"slide_in_quit": SubResource("Animation_6klrt"),
"slide_out": SubResource("Animation_ik080")
}

[sub_resource type="Animation" id="Animation_838cb"]
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/BackgroundSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(455, 505), Vector2(555, 405)]
}

[sub_resource type="Animation" id="Animation_gfj0y"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/BackgroundSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(455, 505), Vector2(655, 305)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mcwfp"]
_data = {
"RESET": SubResource("Animation_838cb"),
"default": SubResource("Animation_gfj0y")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8iuqm")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Logo" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_clg2v")
}

[node name="LogoSprite" type="Sprite2D" parent="Logo"]
position = Vector2(480, 251.399)
scale = Vector2(5, 5)
texture = ExtResource("1_ueh8b")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_np8xi")
}

[node name="TransitionSprite" type="Sprite2D" parent="Transition"]
z_index = 300
position = Vector2(480, 400)
scale = Vector2(5, 5)
texture = ExtResource("2_c7dmo")

[node name="Background" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mcwfp")
}

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
z_index = -10
position = Vector2(455, 505)
scale = Vector2(10, 10)
texture = ExtResource("3_gbfej")

[node name="MainMenuOptions" parent="." instance=ExtResource("5_67ndb")]
layout_mode = 1
offset_left = 401.0
offset_top = 496.0
offset_right = 401.0
offset_bottom = 509.0
scale = Vector2(5, 5)

[node name="Version" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 748.0
offset_right = 967.0
offset_bottom = 796.0
theme_override_fonts/font = ExtResource("4_g1hhb")
theme_override_font_sizes/font_size = 40
text = "v"
vertical_alignment = 2

[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
[connection signal="options" from="MainMenuOptions" to="." method="_on_main_menu_options_options"]
[connection signal="quit" from="MainMenuOptions" to="." method="_on_main_menu_options_quit"]
[connection signal="start" from="MainMenuOptions" to="." method="_on_main_menu_options_start"]
